esp8266-dash-server/base/deployment.yml
---
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "esp8266-dash-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "esp8266-dash-server"
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "esp8266-dash-server"
    spec:
      containers:
        - name: "esp8266-dash-server"
          image: "guppy0130/esp8266-dash-server:latest"
          ports:
            - containerPort: 8000
              name: "esp8266-dash"
              protocol: "TCP"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: 8000
              scheme: "HTTP"
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: "/"
              port: 8000
              scheme: "HTTP"
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "250m"
              memory: "125Mi"
