esp8266-dash-server/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "esp8266-dash-server"
spec:
  ports:
    - port: 8000
      protocol: "TCP"
      name: "esp8266-dash"
  selector:
    app: "esp8266-dash-server"
